<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_match_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_match_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/start_jam_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_jam_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/end_match_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/end_match_button"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:text="@string/end_match_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_jam_button" />

    <Button
        android:id="@+id/pause_jam_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_jam_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_jam_button" />

    <Button
        android:id="@+id/end_jam_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/end_jam_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/start_jam_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_jam_button" />

    <Chronometer
        android:id="@+id/jam_chronometer"
        android:layout_width="366dp"
        android:layout_height="47dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#092FEC"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_match_button" />

    <Chronometer
        android:id="@+id/match_chronometer"
        android:layout_width="153dp"
        android:layout_height="42dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#092FEC"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="pivot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jam_chronometer" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="bloqueuse 1"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/jam_chronometer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="bloquese 2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="bloqueuse 3"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Jammeuse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jam_chronometer" />

    <Button
        android:id="@+id/actual_jam_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jam actuel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_jam_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/previous_jam_button" />

    <Button
        android:id="@+id/previous_jam_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jam précédant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_jam_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jam suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="Bloody vs Marmot"
        app:layout_constraintEnd_toStartOf="@+id/match_chronometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>